2011-06-21  Adrienne Walker  <enne@google.com>

Reviewed by Simon Fraser.

        Add child layers to the overlap map if their parent belatedly becomes composited
        https://bugs.webkit.org/show_bug.cgi?id=62181

        * compositing/layer-creation/overlap-transformed-layer-expected.txt: Added.
        * compositing/layer-creation/overlap-transformed-layer.html: Added.
2011-06-21  Adrienne Walker  <enne@google.com>

        Reviewed by Simon Fraser.

        Add child layers to the overlap map if their parent belatedly becomes composited
        https://bugs.webkit.org/show_bug.cgi?id=62181

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::addToOverlapMapRecursive):
        (WebCore::RenderLayerCompositor::computeCompositingRequirements):
        * rendering/RenderLayerCompositor.h:

Canonical link: https://commits.webkit.org/78707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89394 268f45cc-cd09-0410-ab3c-d52691b4dbfc